[package]
name = "joystick-hal"
description = "A small joystick driver based on embedded-hal"
version = "0.1.0"
edition = "2021"
authors = ["Torben Hansing <torbenhansing@gmail.com>"]
readme = "README.md"
repository = "https://github.com/hansingt/embedded-joystick"
license = "MIT"
keywords = ["embedded-hal", "joystick", "no_std", "embedded", "hal"]
categories = ["embedded", "hardware-support", "no-std"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
critical-section = { version = "1.1.2" }
embedded-hal = { version = "0.2.7", features = ["unproven"] }
nb = { version = "1.1.0" }

[dev-dependencies]
embedded-hal-mock = { version = "0.9.0" }
critical-section = { version = "1.1.2", features = ["std"] }
